--- a/app/assets/templates/shared/header.jst.ejs
+++ b/app/assets/templates/shared/header.jst.ejs
@@ -20,7 +20,7 @@
       <ul class="header-menu">
         <li class="header-menu-item"><a href="#topics/new"> Follow Topics </a></li>
         <li class="header-menu-item"><a href="#user/bio"> Edit Bio</a> </li>
-        <li id="sign-out-link" class="header-menu-item"> Sign Out </li>
+        <li id="sign-out-link" class="header-menu-item"><a> Sign Out </a></li>
       </ul>
 
       <button class="primary-button header-button">Ask Question</button>
