--- a/app/assets/templates/shared/sign_in.jst.ejs
+++ b/app/assets/templates/shared/sign_in.jst.ejs
@@ -2,17 +2,22 @@
 
 <form>
 
-<div>
-  <div class="form-row sign-in-item group">
-    <input type="email" name="user[email]" placeholder="Email">
+  <div>
+    <div class="form-row sign-in-item group">
+      <input type="email" name="user[email]" placeholder="Email">
+    </div>
   </div>
-</div>
 
-<div>
-  <div class="form-row sign-in-item group">
-    <input type="password" name="user[password]" placeholder="Password">
+  <div>
+    <div class="form-row sign-in-item group">
+      <input type="password" name="user[password]" placeholder="Password">
+    </div>
   </div>
-</div>
 
-  <button class="primary-button">Login</button>
+    <div class="group"><button class="primary-button reg-user">Login</button></div>
+    <div class="group"><button class="primary-button demo-user">Demo User</button></div>
+
+
+
+
 </form>
