add default images

--- a/app/assets/templates/search.jst.ejs
+++ b/app/assets/templates/search.jst.ejs
@@ -1,7 +1,8 @@
 <section class="results">
 
-<div class="main-wrapper group">
+	<div class="main-wrapper group">
 	  <p class="column-header search">Search Results</p>
-</div>
+		<p class="status-msg"></p>
+	</div>
 
 </section>
