remove refresh when clicking on search result link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -779,3 +779,7 @@ li.comment-to-answer {
   font-size: 12px;
   font-family: monospace;
 }
+
+.question-answer-item-wrapper.search-item {
+  cursor: pointer;
+}
